B&L QA/objects/MSR_Shipment__c.object
<CustomObject>
    <description>Shipments related to an MSR transfer</description>
    <fields>
        <fullName>Avarto_Link__c</fullName>
        <formula>HYPERLINK(&quot;http://161.242.233.15/elctracking/source/general/trackingpackages.aspx?Shipment.Reference=&quot; &amp; Tracking_No__c, Tracking_No__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Track &amp; Trace</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Carrier</label>
        <referenceTo>Carrier__c</referenceTo>
        <relationshipLabel>MSR Shipment</relationshipLabel>
        <relationshipName>MSR_Shipment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Create_Case__c</fullName>
        <description>Links to the create case page for this MSR Order</description>
        <formula>HYPERLINK(&quot;/500/e?retURL=%2F500%2Fo&amp;cas4=&quot; &amp;  MSR_Order__r.Account__r.Name  &amp; &quot;&amp;cas4_lkid=&quot; &amp; MSR_Order__r.Account__r.Id &amp; &quot;&amp;00N80000004riAp=&quot; &amp;  MSR_Order__r.Name  &amp; &quot;&amp;00N80000004riAn=&quot; &amp;  IF( CONTAINS($Profile.Name, &quot;EMEA&quot;), TEXT(DAY(MSR_Order__r.Order_Date__c)) &amp; &quot;/&quot; &amp; TEXT(MONTH(MSR_Order__r.Order_Date__c)) , TEXT(MONTH(MSR_Order__r.Order_Date__c)) &amp; &quot;/&quot; &amp; TEXT(DAY(MSR_Order__r.Order_Date__c)) ) &amp; &quot;/&quot; &amp; TEXT(YEAR(MSR_Order__r.Order_Date__c)) &amp; &quot;&amp;00N80000004riB2=&quot; &amp;  Shipping_ID__c &amp; &quot;&amp;00N80000004riAq=&quot; &amp;  PS_Product_SKU__c &amp; &quot;&amp;00N80000004riAb=&quot; &amp;  TEXT( MSR_Order__r.Inventory_Business_Unit__c ) &amp; &quot;&amp;00NC00000051Fvi=&quot; &amp; Lot_Serial_ID__c , IF( BEGINS( $Profile.Name , &quot;EMEA&quot;) , &quot;Create Line Case&quot;, &quot;Create Case&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Case</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Shipment_Case__c</fullName>
        <description>Link to Create Case page with shipment details auto-populated</description>
        <formula>HYPERLINK(&quot;/500/e?retURL=%2F500%2Fo&amp;cas4=&quot; &amp; MSR_Order__r.Account__r.Name &amp; &quot;&amp;cas4_lkid=&quot; &amp; MSR_Order__r.Account__r.Id &amp; &quot;&amp;00N80000004riAp=&quot; &amp; MSR_Order__r.Name &amp; &quot;&amp;00N80000004riAn=&quot; &amp; IF( CONTAINS($Profile.Name, &quot;EMEA&quot;), TEXT(DAY(MSR_Order__r.Order_Date__c)) &amp; &quot;/&quot; &amp; TEXT(MONTH(MSR_Order__r.Order_Date__c)) , TEXT(MONTH(MSR_Order__r.Order_Date__c)) &amp; &quot;/&quot; &amp; TEXT(DAY(MSR_Order__r.Order_Date__c)) ) &amp; &quot;/&quot; &amp; TEXT(YEAR(MSR_Order__r.Order_Date__c)) &amp; &quot;&amp;00N80000004riB2=&quot; &amp; Shipping_ID__c &amp; &quot;&amp;00N80000004riAb=&quot; &amp; TEXT( MSR_Order__r.Inventory_Business_Unit__c ) , &quot;Create Shipment Case&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Shipment Case</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_No__c</fullName>
        <description>The Invoice for this orderline</description>
        <label>Invoice No.</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_System_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique identifier for integrations with peoplesoft</description>
        <externalId>true</externalId>
        <label>Legacy System Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Line_No__c</fullName>
        <description>MSR orderline number</description>
        <label>Line No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lot_Serial_ID__c</fullName>
        <description>Inventory lot Id / Serial No</description>
        <label>Lot / Serial ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSR_Order__c</fullName>
        <description>The MSR order to which this line is related</description>
        <label>MSR Order</label>
        <referenceTo>MSR_Header__c</referenceTo>
        <relationshipName>MSR_Order_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PS_Product_SKU__c</fullName>
        <description>The actual sku value in text</description>
        <label>PS Product SKU</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pick_Batch_ID__c</fullName>
        <description>Pick Batch ID</description>
        <label>Pick Batch ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <description>Description of the Product</description>
        <label>Product Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The product that has been ordered</description>
        <label>Product SKU</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>MSR Shipment</relationshipLabel>
        <relationshipName>MSR_Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>How many units of the product were ordered</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ship_ID__c</fullName>
        <label>Ship_ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Via__c</fullName>
        <label>Ship Via</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GROUND</fullName>
                </value>
                <value>
                    <fullName>NON-CONS</fullName>
                </value>
                <value>
                    <fullName>2NDDAYAIR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipment_Date__c</fullName>
        <description>Date of the shipment</description>
        <label>Shipment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipment_Status__c</fullName>
        <description>Status of the msr</description>
        <label>Shipment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Allocated</fullName>
                </value>
                <value>
                    <fullName>Picked</fullName>
                </value>
                <value>
                    <fullName>Packed</fullName>
                </value>
                <value>
                    <fullName>Depleted</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipping_ID__c</fullName>
        <description>Shipment number</description>
        <label>Shipping ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracking_Link__c</fullName>
        <description>Link to the carrier&apos;s website</description>
        <formula>IF( AND( Tracking_No__c &lt;&gt; &apos;&apos;, Carrier__r.Website__c &lt;&gt; &apos;&apos;) , HYPERLINK(  Carrier__r.Website__c &amp;  Tracking_No__c , Tracking_No__c ), Tracking_No__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tracking Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracking_No__c</fullName>
        <description>Shipment tracking no (from carrier)</description>
        <label>Tracking No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transfer_Cost__c</fullName>
        <description>Cost of transferring the stock to its destination</description>
        <label>Transfer Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WayBill_No__c</fullName>
        <label>WayBill_No</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>MSR Shipment</label>
    <nameField>
        <displayFormat>MSH-{0000000000}</displayFormat>
        <label>MSR Shipment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MSR Shipment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>